database upgrade script now compares patient visits to collection events and the number of aliquots collected

--- a/eclipse_ws/biobank2.tools/conf/query.properties
+++ b/eclipse_ws/biobank2.tools/conf/query.properties
@@ -82,7 +82,7 @@ v131.getPatientVisits = \
 	join clinic on clinic.id=aship.clinic_id \
 	join aliquot aq on aq.patient_visit_id=pv.id \
 	group by clinic.name_short,pnumber,pv.date_drawn,pv.date_drawn \
-	order by clinic.name_short,pnumber,pv.date_drawn,pv.date_drawn
+	order by clinic.name_short,pnumber,pv.date_drawn,pv.date_drawn,aliquots
 
 # Version 1.4.0    
     
@@ -163,3 +163,15 @@ v140.getDispatchSpecimens = \
 	join shipping_method sm on sm.id=si.shipping_method_id \
 	order by sc.name_short,rc.name_short,spc.inventory_id, \
 	si.sent_at,si.received_at,sm.name
+v140.getCollectionEvents = \
+	select center.name_short,pnumber,min(p_spc.created_at) as date_drawn,count(*) as specimens \
+	from collection_event ce \
+	join patient p on p.id=ce.patient_id \
+	join specimen p_spc on p_spc.original_collection_event_id=ce.id \
+	join specimen c_spc on c_spc.parent_specimen_id=p_spc.id \
+	join origin_info oi on oi.id=p_spc.origin_info_id \
+	join center on center.id=oi.center_id \
+	where p_spc.parent_specimen_id is null \
+	and center.discriminator='Clinic' \
+	group by center.name_short,pnumber,p_spc.created_at \
+	order by center.name_short,pnumber,p_spc.created_at,specimens
