--- a/eclipse_ws/biobank2.tests/.classpath
+++ b/eclipse_ws/biobank2.tests/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/biobank.common"/>
 	<classpathentry kind="lib" path="/biobank.common/lib/client/log4j-1.2.14.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/biobank2.tools"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
