--- a/build.xml
+++ b/build.xml
@@ -1106,8 +1106,8 @@
     </taskdef>
     <propertyregex property="featureVersion"
                    input="${featureJar}"
-                   regexp="biobank2.feature.core_(.*)/.jar"
-                   select="/1"
+                   regexp="biobank2.feature.core_(.*)\.jar"
+                   select="\1"
                    casesensitive="true" />
     <copy file="${product.dir}/site.xml"
           tofile="${updateSiteFolder}/site.xml" />
