--- a/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
+++ b/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
@@ -1,66 +1,66 @@
-AliquotCount.NAME = Sample Type Totals
-AliquotCount.DESCRIPTION=Lists the total number of aliquots per sample type.
-AliquotCount.EDITOR=AliquotCountEditor
-AliquotInvoiceByClinic.NAME = Aliquots per Clinic by Date
-AliquotInvoiceByClinic.DESCRIPTION=Lists all aliquots linked in a particular date range, ordered by clinic.
-AliquotInvoiceByClinic.EDITOR=AliquotInvoiceByClinicEditor
-AliquotInvoiceByPatient.NAME = Aliquots per Patient by Date
-AliquotInvoiceByPatient.DESCRIPTION =Lists all aliquots linked in a particular date range, ordered by patient.
-AliquotInvoiceByPatient.EDITOR=AliquotInvoiceByPatientEditor
+#AliquotCount.NAME = Sample Type Totals
+#AliquotCount.DESCRIPTION=Lists the total number of aliquots per sample type.
+#AliquotCount.EDITOR=AliquotCountEditor
+#AliquotInvoiceByClinic.NAME = Aliquots per Clinic by Date
+#AliquotInvoiceByClinic.DESCRIPTION=Lists all aliquots linked in a particular date range, ordered by clinic.
+#AliquotInvoiceByClinic.EDITOR=AliquotInvoiceByClinicEditor
+#AliquotInvoiceByPatient.NAME = Aliquots per Patient by Date
+#AliquotInvoiceByPatient.DESCRIPTION =Lists all aliquots linked in a particular date range, ordered by patient.
+#AliquotInvoiceByPatient.EDITOR=AliquotInvoiceByPatientEditor
 AliquotRequest.NAME = Aliquot Request by CSV file
 AliquotRequest.DESCRIPTION=Given a CSV file detailing a request (Patient Number, Date Drawn, Sample Type (Short Name), # Requested), generate a list of aliquot locations.
 AliquotRequest.EDITOR=AliquotRequestEditor
-AliquotsByPallet.NAME = Aliquots By Container
-AliquotsByPallet.DESCRIPTION = Lists all aliquots located in a given bottom-level container.
-AliquotsByPallet.EDITOR = AliquotsByPalletEditor
-AliquotSCount.NAME= Sample Types by Study
-AliquotSCount.DESCRIPTION=Lists the total number of each aliquot sample type by study.
-AliquotSCount.EDITOR = AliquotSCountEditor
-CAliquots.NAME = Aliquots per Study per Clinic
-CAliquots.DESCRIPTION = Displays the total number of aliquots per study per clinic for given top-level containers.
-CAliquots.EDITOR= AliquotsByStudyClinicEditor
+#AliquotsByPallet.NAME = Aliquots By Container
+#AliquotsByPallet.DESCRIPTION = Lists all aliquots located in a given bottom-level container.
+#AliquotsByPallet.EDITOR = AliquotsByPalletEditor
+#AliquotSCount.NAME= Sample Types by Study
+#AliquotSCount.DESCRIPTION=Lists the total number of each aliquot sample type by study.
+#AliquotSCount.EDITOR = AliquotSCountEditor
+#CAliquots.NAME = Aliquots per Study per Clinic
+#CAliquots.DESCRIPTION = Displays the total number of aliquots per study per clinic for given top-level containers.
+#CAliquots.EDITOR= AliquotsByStudyClinicEditor
 ContainerCapacity.NAME = Container Capacity
 ContainerCapacity.DESCRIPTION = Displays the total aliquot capacity for each container and the total currently in use
 ContainerCapacity.EDITOR = ContainerCapacityEditor
 ContainerEmptyLocations.NAME = Available Locations by Container
 ContainerEmptyLocations.DESCRIPTION = Lists the available aliquot positions of a given parent container. Note: Child containers must be initialized
 ContainerEmptyLocations.EDITOR = ContainerEmptyLocationsEditor
-DAliquots.NAME = Aliquots per Study per Clinic by Date
-DAliquots.DESCRIPTION=Displays the total number of aliquots per study per clinic grouped by link date in a calendar week/month/quarter/year for given top-level containers.
-DAliquots.EDITOR = AliquotsByStudyClinicDateEditor
+#DAliquots.NAME = Aliquots per Study per Clinic by Date
+#DAliquots.DESCRIPTION=Displays the total number of aliquots per study per clinic grouped by link date in a calendar week/month/quarter/year for given top-level containers.
+#DAliquots.EDITOR = AliquotsByStudyClinicDateEditor
 FTAReport.NAME = FTA Aliquots by First Visit
 FTAReport.DESCRIPTION = Retrieves one FTA card for a patient with their first patient visit after the specified date, for a given study. 
 FTAReport.EDITOR = FTAReportEditor
-InvoicingReport.NAME = Invoicing Report
-InvoicingReport.DESCRIPTION = Displays the total patient visits per study and per clinic, and lists the total aliquots for each sample type collected.
-InvoicingReport.EDITOR = InvoicingReportEditor
+#InvoicingReport.NAME = Invoicing Report
+#InvoicingReport.DESCRIPTION = Displays the total patient visits per study and per clinic, and lists the total aliquots for each sample type collected.
+#InvoicingReport.EDITOR = InvoicingReportEditor
 FvLPatientVisits.NAME = Clinic Activity by Study
 FvLPatientVisits.DESCRIPTION =Reports the date of the first and last patient visit for each clinic in each study.
 FvLPatientVisits.EDITOR = FvLPatientVisitsEditor
-NewPVsByStudyClinic.NAME = New Patient Visits per Study per Clinic by Date
-NewPVsByStudyClinic.DESCRIPTION =Displays the total number of patient visits added per study per clinic grouped by date processed in a calendar week/month/quarter/year.
-NewPVsByStudyClinic.EDITOR = PsByStudyClinicDateEditor
-NewPsByStudyClinic.NAME = New Patients per Study per Clinic by Date
-NewPsByStudyClinic.DESCRIPTION=Displays the total number of patients added per study per clinic grouped by date processed in a calendar week/month/quarter/year.
-NewPsByStudyClinic.EDITOR = PsByStudyClinicDateEditor
+#NewPVsByStudyClinic.NAME = New Patient Visits per Study per Clinic by Date
+#NewPVsByStudyClinic.DESCRIPTION =Displays the total number of patient visits added per study per clinic grouped by date processed in a calendar week/month/quarter/year.
+#NewPVsByStudyClinic.EDITOR = PsByStudyClinicDateEditor
+#NewPsByStudyClinic.NAME = New Patients per Study per Clinic by Date
+#NewPsByStudyClinic.DESCRIPTION=Displays the total number of patients added per study per clinic grouped by date processed in a calendar week/month/quarter/year.
+#NewPsByStudyClinic.EDITOR = PsByStudyClinicDateEditor
 PatientVisitSummary.NAME = Patient Visit Statistics by Study and Clinic
 PatientVisitSummary.DESCRIPTION=Displays the total number of patients for each of 1-5+ visits, the total number of visits, and the total number of patients per study per clinic for a given date range.
 PatientVisitSummary.EDITOR=PatientVisitSummaryEditor
 #PatientWBC.NAME = Patient WBC Aliquots
 #PatientWBC.DESCRIPTION=Displays a list of the WBC aliquots located in Cabinets taken from a patient. Note: the short name of the sample type must be 'DNA(Blood)', and the top container's name must contain 'Cabinet'.
 #PatientWBC.EDITOR=PatientWBCEditor
-PsByStudy.NAME = Patients per Study by Date
-PsByStudy.DESCRIPTION=Displays the total number of patients per study with at least one patient visit grouped by date processed in a calendar week/month/quarter/year.
-PsByStudy.EDITOR = PsByStudyDateEditor
-PVsByStudy.NAME=Patient Visits per Study by Date
-PVsByStudy.DESCRIPTION=Displays the total number of patient visits per study grouped by date processed in a calendar week/month/quarter/year.
-PVsByStudy.EDITOR = PsByStudyDateEditor
+#PsByStudy.NAME = Patients per Study by Date
+#PsByStudy.DESCRIPTION=Displays the total number of patients per study with at least one patient visit grouped by date processed in a calendar week/month/quarter/year.
+#PsByStudy.EDITOR = PsByStudyDateEditor
+#PVsByStudy.NAME=Patient Visits per Study by Date
+#PVsByStudy.DESCRIPTION=Displays the total number of patient visits per study grouped by date processed in a calendar week/month/quarter/year.
+#PVsByStudy.EDITOR = PsByStudyDateEditor
 QAAliquots.NAME = Aliquot QA
 QAAliquots.DESCRIPTION =Retrieves a list of aliquots, at random, within a date range by sample type for a given set of top-level containers.  Note: the number of aliquots must be specified.
 QAAliquots.EDITOR = QAAliquotsEditor
-SAliquots.NAME =Aliquots per Study
-SAliquots.DESCRIPTION=Displays the total number of aliquots per study for given top-level containers.
-SAliquots.EDITOR = AliquotsByStudyEditor
+#SAliquots.NAME =Aliquots per Study
+#SAliquots.DESCRIPTION=Displays the total number of aliquots per study for given top-level containers.
+#SAliquots.EDITOR = AliquotsByStudyEditor
 SampleTypePvCount.NAME = Sample Type Totals by Patient Visit and Study
 SampleTypePvCount.DESCRIPTION=Lists the total number of each sample type per patient visit for a specified study.
 SampleTypePvCount.EDITOR = SampleTypePvCountEditor
