update LoggingView to user the LogPeer names.  + update build.xml to make the ant product works properly

--- a/build.xml
+++ b/build.xml
@@ -1036,7 +1036,7 @@
   </target>
 
 
-  <target name="product" depends="eclipse.home.env,deploy-eclipse">
+  <target name="product" depends="eclipse.home.env,deploy">
     <property name="buildDirectory" value="${product.dir}/buildDirectory" />
     <delete dir="${buildDirectory}" />
     <copy todir="${buildDirectory}/plugins/biobank2">
