--- a/eclipse_ws/biobank2.tools/conf/log4j.properties
+++ b/eclipse_ws/biobank2.tools/conf/log4j.properties
@@ -1,5 +1,6 @@
 log4j.rootLogger=warn, R, stdout
 log4j.category.edu.ualberta.med.biobank=info
+log4j.category.edu.ualberta.med.biobank.tools=info
 log4j.category.edu.ualberta.med.biobank.tools.modelextender=info
 
 #log4j.category.edu.ualberta.med.biobank.widgets.MultiSelect=TRACE,stdout
